# genco

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: actions.yml
doc/: CONTRIBUTING.md
src/: lib.rs  liblib.rlib  main.rs
src/cli/: mod.rs
src/core/: mod.rs
src/core/asynchronous/: future_handler.rs  mod.rs
src/core/database/: db.rs  db_setup.rs  mod.rs  setup.rs
src/core/file_system/: file_cache.rs  file_reader.rs  file_system_editor_buffer.rs  mod.rs  path_helper.rs
src/core/observability/: logger.rs
src/core/parser/: parser_node_trait.rs  string_helper.rs
src/core/script/: mod.rs  recipe.rs  recipe_step_scanner.rs  recipe_type.rs  semver.rs
src/core/testing/: test_assert.rs  test_path.rs
src/core/user_input/: cli_query.rs  mod.rs  user_input_function.rs  user_input_handler.rs
src/domain/: mod.rs
src/domain/core/: mod.rs
src/domain/usecase/: mod.rs
src/java/: annotation_usage.rs  class.rs  data_type.rs  expression.rs  field.rs  import.rs  indentation_config.rs  interface.rs  method.rs  mod.rs  record.rs  statement.rs  variable.rs
src/java/dependency/: mod.rs
src/java/dto/: java_annotation_usage.rs  java_class.rs  java_data_type.rs  java_expression.rs  java_field.rs  java_import.rs  java_indentation_config.rs  java_interface.rs  java_method.rs  java_steps_generator.rs  java_variable.rs  java_visibility.rs  mod.rs
src/java/generator/: java_class_generator.rs  java_method_generator.rs  mod.rs
src/java/parser/: JavaParserRecord.java  java_node.rs  java_node_type.rs  java_parser.rs  mod.rs
src/yaml/: mod.rs
(+298 files in other folders)
