[package]
name = "genco"
version = "0.1.0"
edition = "2021"


[dependencies]
tree-sitter = "0.20.9"
tree-sitter-java = "0.20.0"
tree-sitter-parsers = "0.0.5"
tree-sitter-json = "0.19.0"
regex = "1.7.1"
typed-builder = "0.14.0"

[build-dependencies]
cc = "1.0" # Compile C code (tree-sitter c parsers) into our Rust binary
