[package]
name = "genco"
version = "0.1.0"
edition = "2021"


[dependencies]
# Parsers
tree-sitter = "0.20.10"
tree-sitter-java = "0.20.0"
tree-sitter-parsers = "0.0.5"
tree-sitter-json = "0.19.0"
regex = "1.9.5"

# Handled async tasks
tokio = { version = "1.32.0", features = ["full"] }

# Embedded database
rusqlite = { version = "0.29.0", features = ["bundled"] }

[lib]
crate-type = ["lib"]
